Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ We compare <code>Bigio.BigArray&lt;T&gt;</code> and <code>PowerCollections.BigLi
 </tbody>
 </table>
 
-<p>Foreach throught full collection</p>
+<p>Foreach through full collection</p>
 
 <table>
 <thead>
@@ -629,7 +629,7 @@ We compare <code>Bigio.BigArray&lt;T&gt;</code> and <code>PowerCollections.BigLi
 </tbody>
 </table>
 
-<p>For throught full collection</p>
+<p>For through full collection</p>
 
 <table>
 <thead>
